...

/*******************************************************************************
 * MARK: - Menu
 ******************************************************************************/
"menu.home.title" = "Home";
"menu.features.title" = "Features";
"menu.videos.title" = "Videos";
"menu.helpful.links.title" = "Helpful links";
"menu.recent.product.updates.title" = "Recent Product updates";
"menu.twitter.title" = "Twitter";
"menu.application.backend.title" = "Application backend";
"menu.get.device.id.title" = "Get the Device ID";
"menu.out.of.app.title" = "Out-of-app/Push";
"menu.in.app.title" = "In-app";
...
